--- a/exemple de lemming.ipynb
+++ b/exemple de lemming.ipynb
@@ -10,8 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Token chargé avec succès ✅\n",
-      "✅ Le bot est prêt\n"
+      "Token chargé avec succès ✅\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-22 19:10:27] [INFO    ] discord.client: logging in using static token\n",
+      "[2025-06-22 19:10:27] [INFO    ] discord.client: logging in using static token\n",
+      "[2025-06-22 19:10:27] [INFO    ] discord.client: logging in using static token\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-22 19:10:27] [INFO    ] discord.client: logging in using static token\n",
+      "[2025-06-22 19:10:27] [INFO    ] discord.client: logging in using static token\n",
+      "[2025-06-22 19:10:30] [INFO    ] discord.gateway: Shard ID None session has been invalidated.\n",
+      "[2025-06-22 19:10:30] [INFO    ] discord.gateway: Shard ID None session has been invalidated.\n",
+      "[2025-06-22 19:10:30] [INFO    ] discord.gateway: Shard ID None session has been invalidated.\n",
+      "[2025-06-22 19:10:30] [INFO    ] discord.gateway: Shard ID None session has been invalidated.\n",
+      "[2025-06-22 19:10:30] [INFO    ] discord.gateway: Shard ID None session has been invalidated.\n",
+      "[2025-06-22 19:10:36] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: d521cae5becd0e2ca15083d93781e23c).\n",
+      "[2025-06-22 19:10:36] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: d521cae5becd0e2ca15083d93781e23c).\n",
+      "[2025-06-22 19:10:36] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: d521cae5becd0e2ca15083d93781e23c).\n",
+      "[2025-06-22 19:10:36] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: d521cae5becd0e2ca15083d93781e23c).\n",
+      "[2025-06-22 19:10:36] [INFO    ] discord.gateway: Shard ID None has connected to Gateway (Session ID: d521cae5becd0e2ca15083d93781e23c).\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Le bot est prêt et connecté !\n"
      ]
     }
    ],
@@ -23,85 +56,92 @@
     "import asyncio\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
+    "import random\n",
+    "import threading\n",
     "\n",
-    "load_dotenv()  # charge le fichier .env\n",
-    "\n",
+    "# Chargement des variables d'environnement\n",
+    "load_dotenv()\n",
     "token = os.getenv(\"DISCORD_TOKEN\")\n",
     "if token is None:\n",
     "    raise ValueError(\"⚠️ La variable d'environnement DISCORD_TOKEN n'est pas définie.\")\n",
-    "\n",
     "print(\"Token chargé avec succès ✅\")\n",
     "\n",
-    "# note d'intention à  faire + dictionnaire d'intents avec des mots-clés Artiste/Lyrics\n",
-    "# Appliquer nest_asyncio pour corriger la boucle d'événements de Jupyter\n",
+    "# Correction de la boucle Jupyter si besoin\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "# TOKEN DU BOT DISCORD\n",
-    "  # ⚠️ remplace ça par une variable d’environnement dans un vrai projet\n",
-    "\n",
-    "# Intents Discord (accès aux messages, membres, etc.)\n",
-    "intents_discord = discord.Intents.all()\n",
-    "intents_discord.members = True\n",
-    "\n",
+    "# Intents Discord\n",
+    "intents_discord = discord.Intents.default()\n",
+    "intents_discord.messages = True\n",
     "client = discord.Client(intents=intents_discord)\n",
     "\n",
-    "# Dictionnaire d’intents\n",
+    "# Dictionnaire d’intents (chansons)\n",
     "intents = {\n",
     "    \"chanter\": {\n",
     "        \"Sardou\": {\n",
     "            \"titre\": \"Les Lacs du Connemara\",\n",
-    "            \"paroles\": \"C’est en Irlande qu’il est né, entre Galway et Limerick,\\nDans un coin sauvage de terre brûlée...\\nAux lacs du Connemara !\"\n",
+    "            \"paroles\": \"C’est en Irlande qu’il est né, entre Galway et Limerick...\"\n",
     "        },\n",
     "        \"Renaud\": {\n",
     "            \"titre\": \"Mistral gagnant\",\n",
-    "            \"paroles\": \"À m'asseoir sur un banc cinq minutes avec toi,\\nEt regarder les gens tant qu'y en a...\"\n",
-    "        },\n",
-    "        \"Calogero\": {\n",
-    "            \"titre\": \"En apesanteur\",\n",
-    "            \"paroles\": \"Et si je te disais que rien ne m’empêche de rêver,\\nMême en apesanteur...\"\n",
+    "            \"paroles\": \"À m'asseoir sur un banc cinq minutes avec toi...\"\n",
     "        },\n",
     "        \"Steve\": {\n",
     "            \"titre\": \"Le Poasson Steve\",\n",
-    "            \"paroles\": \"Steve, le poisson, nage dans l'océan,\\nAvec ses amis, il est toujours content...\"\n",
+    "            \"paroles\": \"Steve, le poisson... ORANGeuuuh !!!\"\n",
     "        },\n",
     "        \"Dalida\": {\n",
     "            \"titre\": \"Gigi l'Amoroso\",\n",
-    "            \"paroles\": \"Gigi l'Amoroso, croqueur d'amour, l'œil de velours,\\nComme une caresse...\"\n",
+    "            \"paroles\": \"Gigi l'Amoroso, croqueur d'amour...\"\n",
     "        },\n",
     "        \"Johnny\": {\n",
     "            \"titre\": \"Que je t'aime\",\n",
-    "            \"paroles\": \"Quand tes cheveux s'étalent,\\nComme un soleil d'été...\"\n",
+    "            \"paroles\": \"Quand tes cheveux s'étalent...\"\n",
     "        },\n",
     "        \"Brel\": {\n",
     "            \"titre\": \"Ne me quitte pas\",\n",
-    "            \"paroles\": \"Ne me quitte pas, il faut oublier,\\nTout peut s'oublier qui s'enfuit déjà...\"\n",
+    "            \"paroles\": \"Ne me quitte pas, il faut oublier...\"\n",
     "        },\n",
     "        \"Aznavour\": {\n",
     "            \"titre\": \"La Bohème\",\n",
-    "            \"paroles\": \"La Bohème, la Bohème,\\nÇa voulait dire, on est heureux...\"\n",
+    "            \"paroles\": \"La Bohème, la Bohème...\"\n",
+    "        },\n",
+    "        \"Claude François\": {\n",
+    "            \"titre\": \"Comme d'habitude\",\n",
+    "            \"paroles\": \"Je me lève et je te bouscule...\"\n",
+    "        },\n",
+    "        \"Jean-Jacques Goldman\": {\n",
+    "            \"titre\": \"Encore un matin\",\n",
+    "            \"paroles\": \"Encore un matin, un matin pour rien...\"\n",
+    "        },\n",
+    "        \"Daniel Balavoine\": {\n",
+    "            \"titre\": \"L'Aziza\",\n",
+    "            \"paroles\": \"Ton nom, il est doux à murmurer...\"\n",
+    "        },\n",
+    "        \"Mylène Farmer\": {\n",
+    "            \"titre\": \"Désenchantée\",\n",
+    "            \"paroles\": \"Tout est chaos, à côté...\"\n",
+    "        },\n",
+    "        \"Michel Berger\": {\n",
+    "            \"titre\": \"La groupie du pianiste\",\n",
+    "            \"paroles\": \"Elle passe ses nuits sans dormir...\"\n",
     "        }\n",
-    "    },\n",
-    "    \"au_revoir\": [\"au revoir\", \"bye\", \"ciao\", \"à bientôt\"],\n",
-    "    \"remerciement\": [\"merci\", \"thanks\", \"merci beaucoup\", \"thx\"],\n",
-    "    \"aide\": [\"aide\", \"support\", \"besoin d'aide\", \"je comprends pas\"]\n",
+    "    }\n",
     "}\n",
     "\n",
-    "\n",
+    "# Fonction de reconnaissance d'intention\n",
     "def get_intent(user_input, intents, threshold=80):\n",
     "    user_input = user_input.lower()\n",
-    "    \n",
-    "    # Cas spécial : intent \"chanter\" avec un artiste\n",
-    "    if \"chante\" in user_input or \"chanson\" in user_input:\n",
-    "        for artiste in intents.get(\"chanter\", {}):\n",
+    "\n",
+    "    if \"chante\" in user_input or \"chanson\" in user_input or \"steve\" in user_input or \"paroles\" in user_input:\n",
+    "        for artiste in intents[\"chanter\"]:\n",
     "            if artiste.lower() in user_input:\n",
     "                return \"chanter\", artiste\n",
-    "        return \"chanter\", None  # \"chanter\" sans artiste reconnu\n",
+    "        return \"chanter\", None\n",
     "\n",
-    "    # Autres intents classiques\n",
     "    best_score = 0\n",
     "    best_intent = \"intent_inconnu\"\n",
     "    for intent, keywords in intents.items():\n",
-    "        if isinstance(keywords, dict):  # Skip dictionnaires imbriqués\n",
+    "        if isinstance(keywords, dict):\n",
     "            continue\n",
     "        for keyword in keywords:\n",
     "            score = fuzz.partial_ratio(user_input, keyword.lower())\n",
@@ -111,24 +151,29 @@
     "\n",
     "    return best_intent, None\n",
     "\n",
-    "# Event quand le bot est prêt\n",
+    "# Quand le bot est prêt\n",
     "@client.event\n",
     "async def on_ready():\n",
-    "    print(\"✅ Le bot est prêt\")\n",
+    "    print(\"✅ Le bot est prêt et connecté !\")\n",
     "\n",
-    "# Event quand un message est reçu\n",
-    "@client.event\n",
+    "# Quand un message est reçu\n",
     "@client.event\n",
     "async def on_message(message):\n",
     "    if message.author == client.user:\n",
     "        return\n",
     "\n",
-    "    mess = message.content.lower()\n",
+    "    mess = message.content.lower().strip()\n",
+    "    print(f\"📨 Message reçu : {mess}\")\n",
+    "\n",
+    "    if mess == \"steve\":\n",
+    "        await message.channel.send(\"Oui c’est moi, veux-tu que je chante ? 🎶\")\n",
+    "        return\n",
     "\n",
     "    if mess.startswith('steve'):\n",
     "        pattern = r'^steve\\s*'\n",
     "        cleaned_message = re.sub(pattern, '', mess, flags=re.IGNORECASE)\n",
     "        detected_intent, artiste = get_intent(cleaned_message, intents)\n",
+    "        print(f\"🎯 Intent : {detected_intent}, Artiste : {artiste}\")\n",
     "\n",
     "        if detected_intent == \"chanter\":\n",
     "            if artiste and artiste in intents[\"chanter\"]:\n",
@@ -141,11 +186,34 @@
     "        else:\n",
     "            await message.channel.send(f\"Intent reconnu : **{detected_intent}**\")\n",
     "\n",
-    "# Lancer le bot sans utiliser client.run() (car on est dans Jupyter)\n",
-    "async def start_bot():\n",
-    "    await client.start(token)\n",
+    "    else:\n",
+    "        detected_intent, artiste = get_intent(mess, intents)\n",
+    "        print(f\"🕵️‍♂️ (Sans steve) Intent : {detected_intent}, Artiste : {artiste}\")\n",
     "\n",
-    "await start_bot()\n"
+    "        if detected_intent == \"chanter\":\n",
+    "            if artiste and artiste in intents[\"chanter\"]:\n",
+    "                chanson = intents[\"chanter\"][artiste]\n",
+    "                await message.channel.send(\n",
+    "                    f\"🎤 Je suis Steve, et j'ai deviné que tu voulais :\\n\"\n",
+    "                    f\"🎵 **{artiste} – {chanson['titre']}**\\n\\n{chanson['paroles']}\"\n",
+    "                )\n",
+    "            else:\n",
+    "                await message.channel.send(\"Tu veux que je chante ? Je suis prêt, mais je ne connais pas cet artiste 😥.\")\n",
+    "        else:\n",
+    "            artiste_aleatoire = random.choice(list(intents[\"chanter\"].keys()))\n",
+    "            chanson = intents[\"chanter\"][artiste_aleatoire]\n",
+    "            await message.channel.send(\n",
+    "                f\"👀 On ne m’a pas appelé mais je vais chanter quand même, je suis **Steve** ! 🎤\\n\"\n",
+    "                f\"🎵 **{artiste_aleatoire} – {chanson['titre']}**\\n\\n{chanson['paroles']}\"\n",
+    "            )\n",
+    "\n",
+    "# Fonction pour exécuter dans un Jupyter ou script\n",
+    "def run_bot():\n",
+    "    client.run(token)\n",
+    "\n",
+    "# Lance dans un thread (si Jupyter)\n",
+    "thread = threading.Thread(target=run_bot)\n",
+    "thread.start()\n"
    ]
   }
  ],
